# MK_DroidScreenCast

./: .gitignore  LICENSE.md  README.md  README_ENG.md  config.json  gateway.py  package.json  requirements.txt  screencast.py  tauri_backend.py  web_panel.py
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
docs/: build.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.cjs  vite.config.ts  vite.tauri.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: ErrorBoundary.tsx
frontend/src/components/layout/: Footer.tsx  Header.tsx  Sidebar.tsx
frontend/src/components/overlays/: BootOverlay.tsx  FirstRunModal.tsx  Notifications.tsx  RecordingBanner.tsx
frontend/src/features/automation/: AutomationPage.tsx
frontend/src/features/files/: FilesPage.tsx
frontend/src/lib/: api.ts  navigation.ts  storage.ts  style.ts  time.ts
frontend/src/state/: form.ts
frontend/src/types/: app.ts
mkdsc/: __init__.py  app.py  bootstrap.py  config.py  constants.py  devices.py  logging_utils.py  paths.py  tools.py  updater.py  versioning.py
mkdsc/cli/: app.py
mkdsc/i18n/: __init__.py  lexicon_cli.py  lexicon_web.py
mkdsc/web/: connection_optimizer.py  file_manager.py  gallery.py  server.py  service_commands.py
scripts/: build_tauri_backend.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
static/: index.html
static/assets/: index-CQwIs-Lp.css  index-KJTfFWII.js
static/css/: style.css
static/js/: app.js
templates/: index.html
(+2 files in other folders)
